# Resu-Me

./: Cargo.toml  README.md  contact.html  index.html  package-lock.json  package.json  privacy.html  tauri.conf.json  terms.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
icons/: icon.icns
src/: desktop.rs  lib.rs  main.rs
