[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# עדכון תלות tauri - שינוי המאפיינים להתאים לגרסה 2.x
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.0.0-rc"

[features]
# מאפיין custom-protocol
enable-custom-protocol = ["tauri/custom-protocol"]
# מאפיין חדש - desktop - שמשמש לזיהוי סביבות שולחניות
desktop = []
# הוספת מאפיין ברירת מחדל
default = ["desktop"]

# הגדרות לחבילה של Windows
[package.metadata.tauri.bundle.windows]
windows-subsystem = "windows"
webview-install-mode = ["download"]

# הגדרות לחבילה של MacOS
[package.metadata.tauri.bundle.macOS]
frameworks = []
minimum-system-version = "10.13"
