[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["dialog-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# הגדרות לחבילה של Windows
[package.metadata.tauri.bundle.windows]
wix = { language = ["en-US"], template = "wix/main.wxs" }

# הגדרות לחבילה של MacOS
[package.metadata.tauri.bundle.macOS]
frameworks = []
minimumSystemVersion = "10.13"
